--- a/thesis/title.tex
+++ b/thesis/title.tex
@@ -10,6 +10,8 @@
 %% this title page fulfills the requirements of the corporate design
 %% of Graz University of Technology (correct placement of logo)
 
+%% Source: https://github.com/novoid/LaTeX-KOMA-template
+
 \begin{titlingpage}
 
 %\large  %% basic font size of the titlepage
@@ -35,35 +37,38 @@ Philipp Gabler, BSc
 
 \vfill
 
-{\LARGE\bfseries sldfk sldkf}
+\begin{Spacing}{1.1}
+\LARGE\bfseries Automatic Graph Tracking \\ in Dynamic Probabilistic Models \\ via Source
+Transformations
+\end{Spacing}
 
-{\large\bfseries sldkf sldf}
+% {\large\bfseries Subtitle}
 
 \vfill\vfill\vfill\vfill
 
-{\normalsize\bfseries Masterarbeit}\\
+{\normalsize\bfseries Master's Thesis}\\
 \vfill
-zur Erlangung des akademischen Grades\\
+to achieve the university degree of\\
 {Master of Science}\\
 \vfill
-eingereicht an der\\
-{\normalsize\bfseries Technischen Universität Graz}
+submitted to\\
+{\normalsize\bfseries Graz University of Technology}
 
 \vfill\vfill\vfill
 \vfill\vfill\vfill
 
-Betreuer\\
+Supervisor\\
 Univ.-Prof. Dipl.-Ing. Dr.\thinspace{}mont. Franz Pernkopf\\
 \vfill
-Mitbetreuer\\
-Martin Trapp\\
+Co-supervisor\\
+Dipl.-Ing. Martin Trapp, BSc\\
 \vfill
 \vfill
-Institut für Signalverarbeitung und Sprachkommunikation\\
+Institute of Signal Processing and Speech Communication\\
 
 \vfill
 
-Fakultät für Informatik und Biomedizinische Technik
+Faculty of Electrical and Information Engineering
 
 \vfill\vfill\vfill
 
