--- a/thesis/declaration.tex
+++ b/thesis/declaration.tex
@@ -1,17 +1,3 @@
-%%%% Time-stamp: <2017-02-14 16:01:12 vk>
-%% ========================================================================
-%%%% Disclaimer
-%% ========================================================================
-%%
-%% created by
-%%
-%%      Karl Voit, and Matthias Wölbitsch
-%%
-%%
-%% code for the date and signature fields adapted from
-%% http://tex.stackexchange.com/a/20562
-
-
 \newcommand{\textfield}[2]{
   \vbox{
     \hsize=#1\kern3cm\hrule\kern1ex
@@ -19,18 +5,19 @@
   }
 }
 
+\renewcommand{\abstractname}{Affidavit}
+\begin{abstract}
+  \phantomsection
+  \label{affidavit}
+  \currentpdfbookmark{Affidavit}{affidavit}
+  \noindent
+  I declare that I have authored this thesis independently, that I have not used other than the
+  declared sources/resources, and that I have explicitly indicated all material which has been
+  quoted either literally or by content from the sources used. The text document uploaded to
+  \abbrev{TUGRAZ}online is identical to the present master‘s thesis.
 
-\section*{Affidavit}
-I declare that I have authored this thesis independently, that I have
-not used other than the declared sources/resources, and that I have
-explicitly indicated all material which has been quoted either
-literally or by content from the sources used. The text document
-uploaded to \abbrev{TUGRAZ}online is identical to the present master‘s
-thesis.
-
-\hbox to \hsize{\textfield{4cm}{Date}\hfil\hfil\textfield{7cm}{Signature}}
-
-
+  \hbox to \hsize{\textfield{4cm}{Date}\hfil\hfil\textfield{7cm}{Signature}}
+\end{abstract}
 
 %%% Local Variables:
 %%% mode: latex
