Update with suggestions

--- a/thesis/automatic_graph_tracking.tex
+++ b/thesis/automatic_graph_tracking.tex
@@ -1,12 +1,18 @@
-\chapter{Implementation of Automatic Graph Tracking in Julia}
-\label{cha:impl-autom-graph}
+\chapter{Implementation of Dynamic Graph Tracking in Julia}
+\label{cha:impl-dynam-graph}
 
 
-\section{Dynamic Graph Tracking and Extended Wengert Lists}
-\label{sec:dynam-graph-track}
+\section{Automatic Graph Tracking and Extended Wengert Lists}
+\label{sec:autom-graph-track}
+
+\section{Applications}
+\label{sec:applications}
+
+\subsection{Dependency Analysis in Dynamic Models}
+\label{sec:depend-analys-dynam}
 
 
-\section{JAGS-Style Automatic Calculation of Gibbs Conditionals}
+\subsection{JAGS-Style Automatic Calculation of Gibbs Conditionals}
 \label{sec:jags-style-automatic}
 
 
