--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -23,10 +23,12 @@
 \usepackage[final]{mylistings}
 \usepackage{jlcode}
 
+\title{Automatic Graph Tracking in Probabilistic Models via Source Transformations}
+
 \hypersetup{
   pdfinfo={
     Author={Philipp Gabler},
-    Title={Automatic Graph Tracking in Probabilistic Models via Source Transformations}
+    Title={\thetitle}
   },
   % colorlinks=false
 }
@@ -183,6 +185,7 @@
 \include{introduction}
 \include{background}
 \include{automatic_graph_tracking}
+\include{experiments}
 \include{discussion}
 
 
