--- a/thesis/title.tex
+++ b/thesis/title.tex
@@ -38,7 +38,7 @@ Philipp Gabler, BSc
 \vfill
 
 \begin{Spacing}{1.1}
-\LARGE\bfseries Automatic Graph Tracking \\ in Dynamic Probabilistic Models \\ via Source
+\LARGE\bfseries Automatic Graph Tracking \\ in Dynamic Probabilistic Programs \\ via Source
 Transformations
 \end{Spacing}
 
