--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -185,7 +185,7 @@
 \include{introduction}
 \include{background}
 \include{automatic_graph_tracking}
-\include{experiments}
+\include{tracking_models}
 \include{discussion}
 
 
