--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -23,7 +23,7 @@
 \usepackage[final]{mylistings}
 \usepackage{jlcode}
 
-\title{Automatic Graph Tracking in Probabilistic Models via Source Transformations}
+\title{Automatic Graph Tracking in Probabilistic Programs via Source Transformations}
 
 \hypersetup{
   pdfinfo={
