Fix file variable in typographic_setup

--- a/thesis/typographic_setup.sty
+++ b/thesis/typographic_setup.sty
@@ -183,5 +183,5 @@
 \renewcommand{\sqrt}[2][]{\@oldsqrt[\uproot{1}#1]{#2}}
 
 %%% Local Variables: 
-%%% TeX-master: "../document"
+%%% TeX-master: "main"
 %%% End:
